# fanuc_demo

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: demo.launch  fanuc.launch
models/fanuc_lrmate200id/: fanuc_lrmate200id.urdf.xacro  model.config  model.sdf
scripts/: update_model_path.bash  update_model_sdf.bash
src/: demo.cpp
worlds/: simple.world
