<?xml version="1.0"?>
<package>
<name>fanuc_demo</name>
<version>0.0.0</version>
<description>the fanuc_demo package</description>

<!-- one maintainer tag required, multiple allowed, one person per tag --> 
<!-- example:  -->
<!-- <maintainer email="jane.doe@example.com">jane doe</maintainer> -->
<maintainer email="pavapil@gmail.com">pavel-p</maintainer>


<!-- one license tag required, multiple allowed, one license per tag -->
<!-- commonly used license strings: -->
<!--   bsd, mit, boost software license, gplv2, gplv3, lgplv2.1, lgplv3 -->
<license>todo</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>descartes_core</build_depend>
<build_depend>descartes_moveit</build_depend>
<build_depend>descartes_planner</build_depend>
<build_depend>descartes_trajectory</build_depend>
<build_depend>trajectory_msgs</build_depend>
<build_depend>gazebo_ros</build_depend>

<run_depend>descartes_core</run_depend>
<run_depend>descartes_moveit</run_depend>
<run_depend>descartes_planner</run_depend>
<run_depend>descartes_trajectory</run_depend>
<run_depend>trajectory_msgs</run_depend>
<run_depend>gazebo_ros</run_depend>

<run_depend>fanuc_lrmate200id_moveit_config</run_depend>
<run_depend>fanuc_lrmate200id_moveit_plugins</run_depend>
<run_depend>fanuc_lrmate200id_support</run_depend>

<export>
</export>

</package>
